k8s/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
spec:
  type: ClusterIP
  selector:
    app: api-gateway
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: order-service
spec:
  type: ClusterIP
  selector:
    app: order-service
  ports:
    - port: 8081
      targetPort: 8080
      protocol: TCP
---

apiVersion: v1
kind: Service
metadata:
  name: customer-service
spec:
  type: ClusterIP
  selector:
    app: customer-service
  ports:
    - port: 8082
      targetPort: 8080
      protocol: TCP
